--- a/src/avtomaty.html
+++ b/src/avtomaty.html
@@ -280,7 +280,7 @@
     <div class="row">
       <div class="col"></div>
       <div class="col-10">
-        <h5 class="text-left fw-bold">
+        <h5 class="text-center fw-bold">
           <small>
             Автоматичні зернові кавомашини - це ідеальне рішення для тих, хто цінує свіжість та якість справжньої кави.
           </small>
@@ -781,7 +781,7 @@
             <small>
               <p class="lh-sm">
                 Завдяки зручному інтерфейсу користувача та мінімалістичному дизайну, Easy легко інтегрується в будь-який
-                інтер'єр Й забезпечує стабільний результат — чашка за чашкою.
+                інтер'єр та забезпечує стабільний результат — чашка за чашкою.
               </p>
               <p class="lh-sm">
                 Виробляє 10 продуктів на основі зернової кави Й розчинних напоїв (молоко, шоколад).
@@ -962,7 +962,7 @@
     <div class="row">
       <div class="col"></div>
       <div class="col-10">
-        <h5 class="text-left fw-bold">
+        <h5 class="text-center fw-bold">
           <small>
             Суперавтоматичні зернові кавомашини - це вершина інженерної думки у світі кави.
           </small>
