--- a/src/moloko_shokolad.html
+++ b/src/moloko_shokolad.html
@@ -280,9 +280,9 @@
     <div class="row">
       <div class="col"></div>
       <div class="col-10">
-        <h5 class="text-left fw-bold">
+        <h5 class="text-center fw-bold">
           <small>
-            Готові розчинні суміші можуть значно урізноманітнити меню кавомашини як в чистому вигляді, так й у міксі з
+            Готові розчинні суміші можуть значно урізноманітнити меню кавомашини як в чистому вигляді, так і у міксі з
             кавою.
           </small>
         </h5>
