--- a/src/ru/vending_avtomaty.html
+++ b/src/ru/vending_avtomaty.html
@@ -270,8 +270,12 @@
     <div class="row">
       <div class="col"></div>
       <div class="col-10">
-        <h5 class="text-left fw-bold"> <small>Вендинговые аппараты для кофе и горячих напитков – это современное решение
-            для обеспечения быстрого и удобного доступа к любимым напиткам.</small> </h5>
+        <h5 class="text-center fw-bold">
+          <small>
+            Вендинговые аппараты для кофе и горячих напитков – это современное решение
+            для обеспечения быстрого и удобного доступа к любимым напиткам.
+          </small>
+          </h5>
         <ul>
           <small>
             <li>
