--- a/src/zernovoy_kofe.html
+++ b/src/zernovoy_kofe.html
@@ -280,7 +280,7 @@
     <div class="row">
       <div class="col"></div>
       <div class="col-10">
-        <h5 class="text-left fw-bold">
+        <h5 class="text-center fw-bold">
           <small>
             При купівлі кави Bianchi, ми пропонуємо довгострокову оренду зернових кавомашин з повним сервісним
             обслуговуванням.
@@ -300,6 +300,7 @@
             <li>
               Багатство смаку та аромату, відбірні зерна та ідеально відточені рецепти блендів - основні відмінні
               особливості лінійки кави Bianchi.
+            </li>
           </small>
         </ul>
       </div>
