--- a/src/chay_stakany.html
+++ b/src/chay_stakany.html
@@ -280,7 +280,7 @@
     <div class="row">
       <div class="col"></div>
       <div class="col-10">
-        <h5 class="text-left fw-bold">
+        <h5 class="text-center fw-bold">
           <small>
             Чай "Bianchi" в індивідуальних пакетиках - це ідеальне доповнення до асортименту гарячих напоїв у вашому
             закладі.
