--- a/src/ru/avtomaty.html
+++ b/src/ru/avtomaty.html
@@ -288,7 +288,7 @@
     <div class="row">
       <div class="col"></div>
       <div class="col-10">
-        <h5 class="text-left fw-bold">
+        <h5 class="text-center fw-bold">
           <small>
             Автоматические кофемашины – это идеальное решение для тех, кто ценит
             свежесть и качество настоящего кофе.
@@ -796,7 +796,7 @@
             <br />
             <small>
               <p class="lh-sm">
-                Злагодаря удобному пользовательскому интерфейсу и минималистичному дизайну, Easy легко интегрируется в
+                Благодаря удобному пользовательскому интерфейсу и минималистичному дизайну, Easy легко интегрируется в
                 любой интерьер и обеспечивает стабильный результат — чашка за чашкой.
               </p>
               <p class="lh-sm">
@@ -979,7 +979,7 @@
     <div class="row">
       <div class="col"></div>
       <div class="col-10">
-        <h5 class="text-left fw-bold">
+        <h5 class="text-center fw-bold">
           <small>
             Суперавтоматические зерновые кофемашины – это вершина инженерной мысли в мире кофе.
           </small>
