--- a/src/ru/chay_stakany.html
+++ b/src/ru/chay_stakany.html
@@ -286,7 +286,7 @@
     <div class="row">
       <div class="col"></div>
       <div class="col-10">
-        <h5 class="text-left fw-bold">
+        <h5 class="text-center fw-bold">
           <small>
             Чай "Bianchi" в индивидуальных пакетиках – это идеальное дополнение к
             ассортименту горячих напитков в вашем заведении.
