--- a/src/ru/moloko_shokolad.html
+++ b/src/ru/moloko_shokolad.html
@@ -282,7 +282,7 @@
     <div class="row">
       <div class="col"></div>
       <div class="col-10">
-        <h5 class="text-left fw-bold">
+        <h5 class="text-center fw-bold">
           <small>
             Готовые растворимые смеси могут значительно разнообразить меню кофемашины как в чистом виде, так и в миксе с
             кофе.
