--- a/src/ru/syropi.html
+++ b/src/ru/syropi.html
@@ -284,7 +284,7 @@
     <div class="row">
       <div class="col"></div>
       <div class="col-10">
-        <h5 class="text-left fw-bold">
+        <h5 class="text-center fw-bold">
           <small>
             Кофейные сиропы – это отличный способ разнообразить вкус любимого напитка,
             придавая ему особые нотки и аромат.
