--- a/src/ru/vending_snack.html
+++ b/src/ru/vending_snack.html
@@ -288,7 +288,7 @@
     <div class="row">
       <div class="col"></div>
       <div class="col-10">
-        <h5 class="text-left fw-bold">
+        <h5 class="text-center fw-bold">
           <small>
             Автоматы по продаже еды - это отличная возможность предложить клиентам
             быстрый доступ к вкусным перекусам.
