--- a/src/ru/zernovoy_kofe.html
+++ b/src/ru/zernovoy_kofe.html
@@ -282,7 +282,7 @@
     <div class="row">
       <div class="col"></div>
       <div class="col-10">
-        <h5 class="text-left fw-bold">
+        <h5 class="text-center fw-bold">
           <small>
             При покупке кофе Bianchi мы предлагаем долгосрочную аренду зерновых кофемашин с полным сервисным
             обслуживанием.
@@ -302,6 +302,7 @@
             <li>
               Богатство вкуса и аромата, отборные зерна и идеально отточенные рецепты блендов – основные отличительные
               особенности линейки кофе Bianchi.
+            </li>
           </small>
         </ul>
       </div>
