--- a/src/vending_avtomaty.html
+++ b/src/vending_avtomaty.html
@@ -286,7 +286,7 @@
     <div class="row">
       <div class="col"></div>
       <div class="col-10">
-        <h5 class="text-left fw-bold">
+        <h5 class="text-center fw-bold">
           <small>
             Вендінгові апарати для кави та гарячих напоїв — це сучасне рішення для
             забезпечення швидкого та зручного доступу до улюблених напоїв.
