--- a/src/vending_snack.html
+++ b/src/vending_snack.html
@@ -284,11 +284,8 @@
     <div class="row">
       <div class="col"></div>
       <div class="col-10">
-        <h5 class="text-left fw-bold">
-          <small>
-            Вендингові снекові апарати — це чудова можливість запропонувати клієнтам
-            швидкий доступ до смачних перекусів.
-          </small>
+        <h5 class="text-center fw-bold"><small>Вендингові снекові апарати — це чудова можливість запропонувати клієнтам
+          швидкий доступ до смачних перекусів.</small>
         </h5>
         <ul>
           <small>
