Добавлен Львов изменены Черкассы

--- a/src/contacty.html
+++ b/src/contacty.html
@@ -76,12 +76,12 @@
           <div class="header__item col">
             <ul>
               <li class="telephone text-nowrap">
-                <a class="telephone" href="tel:+380960542770">ХАРКІВ, ЛОЗОВА (096) 054-27-70</a>
-              </li>
-              <li class="telephone text-nowrap">
                 <a class="telephone" href="tel:+380660227720">
                   КИЇВ, РІВНЕ (066) 022-55-72
                 </a>
+              </li>
+              <li class="telephone text-nowrap">
+                <a class="telephone" href="tel:+380960542770">ХАРКІВ, ЛОЗОВА (096) 054-27-70</a>
               </li>
             </ul>
           </div>
@@ -97,12 +97,12 @@
             <ul>
               <li class="telephone text-nowrap">
                 <a class="telephone" href="tel:+380735103130">
-                  БРОВАРИ, БОРИСПІЛЬ (073) 510-31-30
+                  БРОВАРИ, БОРИСПІЛЬ,
                 </a>
               </li>
               <li class="telephone text-nowrap">
-                <a class="telephone" href="tel:+380937909048">
-                  ЧЕРНІГІВ (093) 790-90-48
+                <a class="telephone" href="tel:+380735103130">
+                  ЧЕРКАСИ (073) 510-31-30
                 </a>
               </li>
             </ul>
@@ -115,8 +115,8 @@
                 </a>
               </li>
               <li class="telephone text-nowrap">
-                <a class="telephone text-nowrap" href="tel:+380989700929">
-                  ЧЕРКАСИ (098) 970-09-29
+                <a class="telephone text-nowrap" href="tel:+380937909048">
+                  ЧЕРНІГІВ (093) 790-90-48
                 </a>
               </li>
             </ul>
@@ -137,9 +137,11 @@
           </div>
           <div class="header__item col">
             <ul>
-              <li class="telephone">ВЕНДІНГ</li>
               <li class="telephone text-nowrap">
-                <a class="telephone" href="tel:+380950252822">(095) 025-28-22</a>
+                <a class="telephone" href="tel:+380508765551">ЛЬВІВ (050) 876-55-51</a>
+              </li>
+              <li class="telephone text-nowrap">
+                <a class="telephone" href="tel:+380950252822">ВЕНДІНГ (095) 025-28-22</a>
               </li>
             </ul>
           </div>
@@ -287,6 +289,14 @@
           <div class="col p-5 m-3 mb-5 contacts fill">
             <h5 class="text-center green"><b>ХОРЕКА</b></h5>
             <div class="container hr-line-contacts"></div>
+            <h6><b>КИЇВ, РІВНЕ</b></h6>
+            <ul>
+              <li class="text-nowrap tel">
+                <i class="bi bi-telephone-fill green"></i>
+                <a href="tel:+380660227720">+38(066) 022-77-20</a>
+              </li>
+            </ul>
+            <div class="container hr-line-contacts"></div>
             <h6><b>ХАРКІВ, ЛОЗОВА, ПАВЛОГРАД</b></h6>
             <ul>
               <li class="text-nowrap tel">
@@ -299,15 +309,7 @@
                     </li> -->
             </ul>
             <div class="container hr-line-contacts"></div>
-            <h6><b>КИЇВ, РІВНЕ</b></h6>
-            <ul>
-              <li class="text-nowrap tel">
-                <i class="bi bi-telephone-fill green"></i>
-                <a href="tel:+380660227720">+38(066) 022-77-20</a>
-              </li>
-            </ul>
-            <div class="container hr-line-contacts"></div>
-            <h6><b>БРОВАРИ, БОРИСПІЛЬ</b></h6>
+            <h6><b>БРОВАРИ, БОРИСПІЛЬ, ЧЕРКАСИ</b></h6>
             <ul>
               <li class="text-nowrap tel">
                 <i class="bi bi-telephone-fill green"></i>
@@ -331,11 +333,11 @@
               </li>
             </ul>
             <div class="container hr-line-contacts"></div>
-            <h6><b>ЧЕРКАСИ</b></h6>
+            <h6><b>ЛЬВІВ</b></h6>
             <ul>
               <li class="text-nowrap tel">
                 <i class="bi bi-telephone-fill green"></i>
-                <a href="tel:+380989700929">+38(098) 970-09-29</a>
+                <a href="tel:+380508765551">+38(050) 876-55-51</a>
               </li>
             </ul>
             <div class="container hr-line-contacts"></div>
@@ -353,9 +355,9 @@
             <div class="container hr-line-contacts"></div>
             <h6>
               Встановлення вендінгового обладнання по містах: Київ, Харків, Бровари,
-                Біла Церква, Полтава, Миколаїв, Дніпро, Запоріжжя, Рівне, Львів, Луцьк,
-                Тернопіль, Кам'янець-Подільський, Івано-Франківськ, Чернівці, Вінниця,
-                Житомир, Одеса, Кривий Ріг, Чернігів, Коломия, Стрий.
+              Біла Церква, Полтава, Миколаїв, Дніпро, Запоріжжя, Рівне, Львів, Луцьк,
+              Тернопіль, Кам'янець-Подільський, Івано-Франківськ, Чернівці, Вінниця,
+              Житомир, Одеса, Кривий Ріг, Чернігів, Коломия, Стрий.
             </h6>
             <ul>
               <li class="text-nowrap tel">
@@ -432,16 +434,30 @@
       </div>
     </div>
     <!-- /////////////////////////////////////////   Footer    ////////////////////////////////////////     -->
-  <footer class="footer">
-    <div class="footer-items">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-4 col-6 p-4 offset-md-1">
-            <h6>ХОРЕКА</h6>
-            <p class="footer-left">
+    <footer class="footer">
+      <div class="footer-items">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-4 col-6 p-4 offset-md-1">
+              <h6>ХОРЕКА</h6>
+              <p class="footer-left">
               Встановлення кавових машин по містах: Київ, Харків, Біла Церква, Бориспіль, Бровари, Вінниця,
-              Івано-Франківськ, Лозова, Павлоград, Рівне, Тернопіль, Умань, Хмельницький, Черкаси, Чернігів, Шепетівка.
+              Івано-Франківськ, Лозова, Львів, Павлоград, Рівне, Тернопіль, Умань, Хмельницький, Черкаси, Чернігів, Шепетівка.
             </p>
+            <div class="row">
+              <div class="col col-md-6 footer-left">
+                <h6>Київ, Рівне</h6>
+                <a class="telephone text-nowrap" href="tel:+380660227720">
+                  т. +38 (066) 022-77-20
+                </a>
+              </div>
+              <div class="col footer-left">
+                <h6>Біла Церква, Умань</h6>
+                <a class="telephone text-nowrap" href="tel:+380504400492">
+                  т. +38 (050) 440-04-92
+                </a>
+              </div>
+            </div>
             <div class="row">
               <div class="col col-md-6 footer-left">
                 <h6>Харків, Лозова, Павлоград</h6>
@@ -449,22 +465,8 @@
                   т. +38 (096) 054-27-70
                 </a>
               </div>
-              <div class="col col-md-6 footer-left">
-                <h6>Київ, Рівне</h6>
-                <a class="telephone text-nowrap" href="tel:+380660227720">
-                  т. +38 (066) 022-77-20
-                </a>
-              </div>
-            </div>
-            <div class="row">
               <div class="col footer-left">
-                <h6>Біла Церква, Умань</h6>
-                <a class="telephone text-nowrap" href="tel:+380504400492">
-                  т. +38 (050) 440-04-92
-                </a>
-              </div>
-              <div class="col footer-left">
-                <h6>Бровари, Бориспіль</h6>
+                <h6>Бровари, Бориспіль, Черкаси</h6>
                 <a class="telephone text-nowrap" href="tel:+380989700921">
                   т. +38 (073) 510-31-30
                 </a>
@@ -472,15 +474,15 @@
             </div>
             <div class="row">
               <div class="col footer-left">
-                <h6>Черкаси</h6>
-                <a class="telephone text-nowrap" href="tel:+380989700929">
-                  т. +38 (098) 970-09-29
-                </a>
-              </div>
-              <div class="col footer-left">
                 <h6>Чернігів</h6>
                 <a class="telephone text-nowrap" href="tel:+380937909048">
                   т. +38 (093) 790-90-48
+                </a>
+              </div>
+              <div class="col footer-left">
+                <h6>Львів</h6>
+                <a class="telephone text-nowrap" href="tel:+380508765551">
+                  т. +38 (050) 876-55-51
                 </a>
               </div>
               <div class="col footer-left">
@@ -491,55 +493,55 @@
               </div>
             </div>
 
-            <!-- <div class="row">
+              <!-- <div class="row">
                             <div class="col footer-left">
                                 <h6>e-mail</h6>
                                 <a class="telephone text-nowrap"
                                     href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
                             </div>
                         </div> -->
-          </div>
-          <div class="col-lg-4 col-6 p-4 offset-md-2">
-            <div class="footer-left">
-              <h6>ВЕНДІНГ</h6>
+            </div>
+            <div class="col-lg-4 col-6 p-4 offset-md-2">
+              <div class="footer-left">
+                <h6>ВЕНДІНГ</h6>
+                <p>
+                  Встановлення вендінгового обладнання по містах: Київ, Харків, Бровари,
+                  Біла Церква, Полтава, Миколаїв, Дніпро, Запоріжжя, Рівне, Львів, Луцьк,
+                  Тернопіль, Кам'янець-Подільський, Івано-Франківськ, Чернівці, Вінниця,
+                  Житомир, Одеса, Кривий Ріг, Чернігів, Коломия, Стрий.
+                </p>
+              </div>
+              <h6>Менеджер з розвитку</h6>
+              <p class="footer-left">
+                <a class="telephone text-nowrap" href="tel:+380950252822">
+                  т. +38 (095) 025-28-22
+                </a>
+              </p>
+              <h6>Ел.адреса для запитань, зауважень та пропозицій:</h6>
+              <p class="footer-left">
+                <a class="telephone text-nowrap" href="mailto:support@bianchiprof.com">
+                  support@bianchiprof.com
+                </a>
+              </p>
+              <h6>Юридична інформація</h6>
               <p>
-                Встановлення вендінгового обладнання по містах: Київ, Харків, Бровари,
-                Біла Церква, Полтава, Миколаїв, Дніпро, Запоріжжя, Рівне, Львів, Луцьк,
-                Тернопіль, Кам'янець-Подільський, Івано-Франківськ, Чернівці, Вінниця,
-                Житомир, Одеса, Кривий Ріг, Чернігів, Коломия, Стрий.
+                <a class="telephone text-nowrap" href="./legal_terms.html">
+                  Умови використання сайту
+                </a>
+              </p>
+              <p>
+                <a class="telephone text-nowrap" href="./privacy_policy.html">
+                  Політика конфіденційності
+                </a>
               </p>
             </div>
-            <h6>Менеджер з розвитку</h6>
-            <p class="footer-left">
-              <a class="telephone text-nowrap" href="tel:+380950252822">
-                т. +38 (095) 025-28-22
-              </a>
-            </p>
-            <h6>Ел.адреса для запитань, зауважень та пропозицій:</h6>
-            <p class="footer-left">
-              <a class="telephone text-nowrap" href="mailto:support@bianchiprof.com">
-                support@bianchiprof.com
-              </a>
-            </p>
-            <h6>Юридична інформація</h6>
-            <p>
-              <a class="telephone text-nowrap" href="./legal_terms.html">
-                Умови використання сайту
-              </a>
-            </p>
-            <p>
-              <a class="telephone text-nowrap" href="./privacy_policy.html">
-                Політика конфіденційності
-              </a>
-            </p>
           </div>
         </div>
       </div>
-    </div>
-    <div class="d-flex justify-content-center separator p-1">
-      <h6><small>© 2016-2025 Bianchi professional</small></h6>
-    </div>
-  </footer>
+      <div class="d-flex justify-content-center separator p-1">
+        <h6><small>© 2016-2025 Bianchi professional</small></h6>
+      </div>
+    </footer>
     <!-- /////////////////////////////////////modal///////////////////////////// -->
     <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog">
