--- a/src/legal_terms.html
+++ b/src/legal_terms.html
@@ -65,12 +65,12 @@
           <div class="header__item col">
             <ul>
               <li class="telephone text-nowrap">
-                <a class="telephone" href="tel:+380960542770">ХАРКІВ, ЛОЗОВА (096) 054-27-70</a>
-              </li>
-              <li class="telephone text-nowrap">
                 <a class="telephone" href="tel:+380660227720">
                   КИЇВ, РІВНЕ (066) 022-55-72
                 </a>
+              </li>
+              <li class="telephone text-nowrap">
+                <a class="telephone" href="tel:+380960542770">ХАРКІВ, ЛОЗОВА (096) 054-27-70</a>
               </li>
             </ul>
           </div>
@@ -86,12 +86,12 @@
             <ul>
               <li class="telephone text-nowrap">
                 <a class="telephone" href="tel:+380735103130">
-                  БРОВАРИ, БОРИСПІЛЬ (073) 510-31-30
+                  БРОВАРИ, БОРИСПІЛЬ,
                 </a>
               </li>
               <li class="telephone text-nowrap">
-                <a class="telephone" href="tel:+380937909048">
-                  ЧЕРНІГІВ (093) 790-90-48
+                <a class="telephone" href="tel:+380735103130">
+                  ЧЕРКАСИ (073) 510-31-30
                 </a>
               </li>
             </ul>
@@ -104,8 +104,8 @@
                 </a>
               </li>
               <li class="telephone text-nowrap">
-                <a class="telephone text-nowrap" href="tel:+380989700929">
-                  ЧЕРКАСИ (098) 970-09-29
+                <a class="telephone text-nowrap" href="tel:+380937909048">
+                  ЧЕРНІГІВ (093) 790-90-48
                 </a>
               </li>
             </ul>
@@ -126,9 +126,11 @@
           </div>
           <div class="header__item col">
             <ul>
-              <li class="telephone">ВЕНДІНГ</li>
               <li class="telephone text-nowrap">
-                <a class="telephone" href="tel:+380950252822">(095) 025-28-22</a>
+                <a class="telephone" href="tel:+380508765551">ЛЬВІВ (050) 876-55-51</a>
+              </li>
+              <li class="telephone text-nowrap">
+                <a class="telephone" href="tel:+380950252822">ВЕНДІНГ (095) 025-28-22</a>
               </li>
             </ul>
           </div>
@@ -533,8 +535,23 @@
             <h6>ХОРЕКА</h6>
             <p class="footer-left">
               Встановлення кавових машин по містах: Київ, Харків, Біла Церква, Бориспіль, Бровари, Вінниця,
-              Івано-Франківськ, Лозова, Павлоград, Рівне, Тернопіль, Умань, Хмельницький, Черкаси, Чернігів, Шепетівка.
+              Івано-Франківськ, Лозова, Львів, Павлоград, Рівне, Тернопіль, Умань, Хмельницький, Черкаси, Чернігів,
+              Шепетівка.
             </p>
+            <div class="row">
+              <div class="col col-md-6 footer-left">
+                <h6>Київ, Рівне</h6>
+                <a class="telephone text-nowrap" href="tel:+380660227720">
+                  т. +38 (066) 022-77-20
+                </a>
+              </div>
+              <div class="col footer-left">
+                <h6>Біла Церква, Умань</h6>
+                <a class="telephone text-nowrap" href="tel:+380504400492">
+                  т. +38 (050) 440-04-92
+                </a>
+              </div>
+            </div>
             <div class="row">
               <div class="col col-md-6 footer-left">
                 <h6>Харків, Лозова, Павлоград</h6>
@@ -542,22 +559,8 @@
                   т. +38 (096) 054-27-70
                 </a>
               </div>
-              <div class="col col-md-6 footer-left">
-                <h6>Київ, Рівне</h6>
-                <a class="telephone text-nowrap" href="tel:+380660227720">
-                  т. +38 (066) 022-77-20
-                </a>
-              </div>
-            </div>
-            <div class="row">
               <div class="col footer-left">
-                <h6>Біла Церква, Умань</h6>
-                <a class="telephone text-nowrap" href="tel:+380504400492">
-                  т. +38 (050) 440-04-92
-                </a>
-              </div>
-              <div class="col footer-left">
-                <h6>Бровари, Бориспіль</h6>
+                <h6>Бровари, Бориспіль, Черкаси</h6>
                 <a class="telephone text-nowrap" href="tel:+380989700921">
                   т. +38 (073) 510-31-30
                 </a>
@@ -565,15 +568,15 @@
             </div>
             <div class="row">
               <div class="col footer-left">
-                <h6>Черкаси</h6>
-                <a class="telephone text-nowrap" href="tel:+380989700929">
-                  т. +38 (098) 970-09-29
-                </a>
-              </div>
-              <div class="col footer-left">
                 <h6>Чернігів</h6>
                 <a class="telephone text-nowrap" href="tel:+380937909048">
                   т. +38 (093) 790-90-48
+                </a>
+              </div>
+              <div class="col footer-left">
+                <h6>Львів</h6>
+                <a class="telephone text-nowrap" href="tel:+380508765551">
+                  т. +38 (050) 876-55-51
                 </a>
               </div>
               <div class="col footer-left">
