--- a/src/ru/postovie.html
+++ b/src/ru/postovie.html
@@ -79,13 +79,13 @@
           <div class="header__item col">
             <ul>
               <li class="telephone text-nowrap">
-                <a class="telephone" href="tel:+380960542770">
-                  ХАРЬКОВ, ЛОЗОВАЯ (096) 054-27-70
+                <a class="telephone" href="tel:+380660227720">
+                  КИЕВ, РОВНО (066) 022-77-20
                 </a>
               </li>
               <li class="telephone text-nowrap">
-                <a class="telephone" href="tel:+380660227720">
-                  КИЕВ, РОВНО (066) 022-77-20
+                <a class="telephone" href="tel:+380960542770">
+                  ХАРЬКОВ, ЛОЗОВАЯ (096) 054-27-70
                 </a>
               </li>
             </ul>
@@ -102,12 +102,12 @@
             <ul>
               <li class="telephone text-nowrap">
                 <a class="telephone" href="tel:+380735103130">
-                  БРОВАРЫ, БОРИСПОЛЬ (073) 510-31-30
+                  БРОВАРЫ, БОРИСПОЛЬ,
                 </a>
               </li>
               <li class="telephone text-nowrap">
-                <a class="telephone" href="tel:+380937909048">
-                  ЧЕРНИГОВ (093) 790-90-48
+                <a class="telephone text-nowrap" href="tel:+380735103130">
+                  ЧЕРКАССЫ (073) 510-31-30
                 </a>
               </li>
             </ul>
@@ -120,8 +120,8 @@
                 </a>
               </li>
               <li class="telephone text-nowrap">
-                <a class="telephone text-nowrap" href="tel:+380989700929">
-                  ЧЕРКАССЫ (098) 970-09-29
+                <a class="telephone" href="tel:+380937909048">
+                  ЧЕРНИГОВ (093) 790-90-48
                 </a>
               </li>
             </ul>
@@ -142,9 +142,11 @@
           </div>
           <div class="header__item col">
             <ul>
-              <li class="telephone">ВЕНДИНГ</li>
               <li class="telephone text-nowrap">
-                <a class="telephone" href="tel:+380950252822">(095) 025-28-22</a>
+                <a class="telephone" href="tel:+380508765551">ЛЬВОВ (050) 876-55-51</a>
+              </li>
+              <li class="telephone text-nowrap">
+                <a class="telephone" href="tel:+380950252822">ВЕНДИНГ (095) 025-28-22</a>
               </li>
             </ul>
           </div>
@@ -366,9 +368,23 @@
             <h6>ХОРЕКА</h6>
             <p class="footer-left">
               Установка кофемашин по городам: Киев, Харьков, Борисполь
-              Бровары, Винница, Ивано-Франковск, Лозовая,Павлоград,
+              Бровары, Винница, Ивано-Франковск, Львов, Лозовая,Павлоград,
               Тернополь, Умань, Хмельницкий, Церковь, Черкассы, Шепетовка
             </p>
+            <div class="row">
+              <div class="col col-md-6 footer-left">
+                <h6>Киев, Ровно</h6>
+                <a class="telephone text-nowrap" href="tel:+380660227720">
+                  т. +38 (066) 022-77-20
+                </a>
+              </div>
+              <div class="col footer-left">
+                <h6>Белая Церковь, Умань</h6>
+                <a class="telephone text-nowrap" href="tel:+380504400492">
+                  т. +38 (050) 440-04-92
+                </a>
+              </div>
+            </div>
             <div class="row">
               <div class="col col-md-6 footer-left">
                 <h6>Харьков, Лозовая, Павлоград</h6>
@@ -376,22 +392,8 @@
                   т. +38 (096) 054-27-70
                 </a>
               </div>
-              <div class="col col-md-6 footer-left">
-                <h6>Киев, Ровно</h6>
-                <a class="telephone text-nowrap" href="tel:+380660227720">
-                  т. +38 (066) 022-77-20
-                </a>
-              </div>
-            </div>
-            <div class="row">
               <div class="col footer-left">
-                <h6>Белая Церковь, Умань</h6>
-                <a class="telephone text-nowrap" href="tel:+380504400492">
-                  т. +38 (050) 440-04-92
-                </a>
-              </div>
-              <div class="col footer-left">
-                <h6>Бровары, Борисполь</h6>
+                <h6>Бровары, Борисполь, Черкассы</h6>
                 <a class="telephone text-nowrap" href="tel:+380735103130">
                   т. +38 (073) 510-31-30
                 </a>
@@ -399,15 +401,15 @@
             </div>
             <div class="row">
               <div class="col footer-left">
-                <h6>Черкассы</h6>
-                <a class="telephone text-nowrap" href="tel:+380989700929">
-                  т. +38 (098) 970-09-29
-                </a>
-              </div>
-              <div class="col footer-left">
                 <h6>Чернигов</h6>
                 <a class="telephone text-nowrap" href="tel:+380974996005">
                   т. +38 (097) 499-60-05
+                </a>
+              </div>
+              <div class="col footer-left">
+                <h6>Львов</h6>
+                <a class="telephone text-nowrap" href="tel:+380508765551">
+                  т. +38 (050) 876-55-51
                 </a>
               </div>
             </div>
