--- a/src/ru/contacty.html
+++ b/src/ru/contacty.html
@@ -76,13 +76,13 @@
           <div class="header__item col">
             <ul>
               <li class="telephone text-nowrap">
-                <a class="telephone" href="tel:+380960542770">
-                  ХАРЬКОВ, ЛОЗОВАЯ (096) 054-27-70
+                <a class="telephone" href="tel:+380660227720">
+                  КИЕВ, РОВНО (066) 022-77-20
                 </a>
               </li>
               <li class="telephone text-nowrap">
-                <a class="telephone" href="tel:+380660227720">
-                  КИЕВ, РОВНО (066) 022-77-20
+                <a class="telephone" href="tel:+380960542770">
+                  ХАРЬКОВ, ЛОЗОВАЯ (096) 054-27-70
                 </a>
               </li>
             </ul>
@@ -99,12 +99,12 @@
             <ul>
               <li class="telephone text-nowrap">
                 <a class="telephone" href="tel:+380735103130">
-                  БРОВАРЫ, БОРИСПОЛЬ (073) 510-31-30
+                  БРОВАРЫ, БОРИСПОЛЬ,
                 </a>
               </li>
               <li class="telephone text-nowrap">
-                <a class="telephone" href="tel:+380937909048">
-                  ЧЕРНИГОВ (093) 790-90-48
+                <a class="telephone text-nowrap" href="tel:+380735103130">
+                  ЧЕРКАССЫ (073) 510-31-30
                 </a>
               </li>
             </ul>
@@ -117,8 +117,8 @@
                 </a>
               </li>
               <li class="telephone text-nowrap">
-                <a class="telephone text-nowrap" href="tel:+380989700929">
-                  ЧЕРКАССЫ (098) 970-09-29
+                <a class="telephone" href="tel:+380937909048">
+                  ЧЕРНИГОВ (093) 790-90-48
                 </a>
               </li>
             </ul>
@@ -139,9 +139,11 @@
           </div>
           <div class="header__item col">
             <ul>
-              <li class="telephone">ВЕНДИНГ</li>
               <li class="telephone text-nowrap">
-                <a class="telephone" href="tel:+380950252822">(095) 025-28-22</a>
+                <a class="telephone" href="tel:+380508765551">ЛЬВОВ (050) 876-55-51</a>
+              </li>
+              <li class="telephone text-nowrap">
+                <a class="telephone" href="tel:+380950252822">ВЕНДИНГ (095) 025-28-22</a>
               </li>
             </ul>
           </div>
@@ -288,19 +290,7 @@
         <div class="row">
           <div class="col p-5 m-3 mb-5 contacts fill">
             <h5 class="text-center green"><b>ХОРЕКА</b></h5>
-            <div class="container hr-line-contacts"></div>
-            <h6><b>ХАРКОВ, ЛОЗОВАЯ, ПАВЛОГРАД</b></h6>
-            <ul>
-              <li class="text-nowrap tel">
-                <i class="bi bi-telephone-fill green"></i>
-                <a href="tel:+380960542770">+38(096) 054-27-70</a>
-              </li>
-              <!-- <li class="text-nowrap tel">
-                        <i class="bi bi-telephone-fill green"></i>
-                        <a href="tel:+380935475572">+38(093) 547-55-72</a>
-                    </li> -->
-            </ul>
-            <div class="container hr-line-contacts"></div>
+             <div class="container hr-line-contacts"></div>
             <h6><b>КИЕВ, РОВНО</b></h6>
             <ul>
               <li class="text-nowrap tel">
@@ -309,7 +299,15 @@
               </li>
             </ul>
             <div class="container hr-line-contacts"></div>
-            <h6><b>БРОВАРЫ, БОРИСПОЛЬ</b></h6>
+            <h6><b>ХАРКОВ, ЛОЗОВАЯ, ПАВЛОГРАД</b></h6>
+            <ul>
+              <li class="text-nowrap tel">
+                <i class="bi bi-telephone-fill green"></i>
+                <a href="tel:+380960542770">+38(096) 054-27-70</a>
+              </li>
+            </ul>
+            <div class="container hr-line-contacts"></div>
+            <h6><b>БРОВАРЫ, БОРИСПОЛЬ, ЧЕРКАССЫ</b></h6>
             <ul>
               <li class="text-nowrap tel">
                 <i class="bi bi-telephone-fill green"></i>
@@ -333,11 +331,11 @@
               </li>
             </ul>
             <div class="container hr-line-contacts"></div>
-            <h6><b>ЧЕРКАССЫ</b></h6>
+            <h6><b>ЛЬВОВ</b></h6>
             <ul>
               <li class="text-nowrap tel">
                 <i class="bi bi-telephone-fill green"></i>
-                <a href="tel:+380989700929">+38(098) 970-09-29</a>
+                <a href="tel:+380508765551">+38(050) 876-55-51</a>
               </li>
             </ul>
             <div class="container hr-line-contacts"></div>
@@ -442,70 +440,70 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-4 col-6 p-4 offset-md-1">
-              <h6>ХОРЕКА</h6>
-              <p class="footer-left">
-                Установка кофемашин по городам: Киев, Харьков, Борисполь
-                Бровары, Винница, Ивано-Франковск, Лозовая,Павлоград,
-                Тернополь, Умань, Хмельницкий, Церковь, Черкассы, Шепетовка
-                </p>
-              <div class="row">
-                <div class="col col-md-6 footer-left">
-                  <h6>Харьков, Лозовая, Павлоград</h6>
-                  <a class="telephone text-nowrap" href="tel:+380960542770">
-                    т. +38 (096) 054-27-70
-                  </a>
-                </div>
-                <div class="col col-md-6 footer-left">
-                  <h6>Киев, Ровно</h6>
-                  <a class="telephone text-nowrap" href="tel:+380660227720">
-                    т. +38 (066) 022-77-20
-                  </a>
-                </div>
+            <h6>ХОРЕКА</h6>
+            <p class="footer-left">
+              Установка кофемашин по городам: Киев, Харьков, Борисполь
+              Бровары, Винница, Ивано-Франковск, Львов, Лозовая,Павлоград,
+              Тернополь, Умань, Хмельницкий, Церковь, Черкассы, Шепетовка
+            </p>
+            <div class="row">
+              <div class="col col-md-6 footer-left">
+                <h6>Киев, Ровно</h6>
+                <a class="telephone text-nowrap" href="tel:+380660227720">
+                  т. +38 (066) 022-77-20
+                </a>
               </div>
-              <div class="row">
-                <div class="col footer-left">
-                  <h6>Белая Церковь, Умань</h6>
-                  <a class="telephone text-nowrap" href="tel:+380504400492">
-                    т. +38 (050) 440-04-92
-                  </a>
-                </div>
-                <div class="col footer-left">
-                  <h6>Бровары, Борисполь</h6>
-                  <a class="telephone text-nowrap" href="tel:+380735103130">
-                    т. +38 (073) 510-31-30
-                  </a>
-                </div>
+              <div class="col footer-left">
+                <h6>Белая Церковь, Умань</h6>
+                <a class="telephone text-nowrap" href="tel:+380504400492">
+                  т. +38 (050) 440-04-92
+                </a>
               </div>
-              <div class="row">
-                <div class="col footer-left">
-                  <h6>Черкассы</h6>
-                  <a class="telephone text-nowrap" href="tel:+380989700929">
-                    т. +38 (098) 970-09-29
-                  </a>
-                </div>
-                <div class="col footer-left">
-                  <h6>Чернигов</h6>
-                  <a class="telephone text-nowrap" href="tel:+380974996005">
-                    т. +38 (097) 499-60-05
-                  </a>
-                </div>
+            </div>
+            <div class="row">
+              <div class="col col-md-6 footer-left">
+                <h6>Харьков, Лозовая, Павлоград</h6>
+                <a class="telephone text-nowrap" href="tel:+380960542770">
+                  т. +38 (096) 054-27-70
+                </a>
               </div>
-              <div class="row">
-                <div class="col footer-left">
-                  <h6>Хмельницкий, Тернополь, Винница, Ивано-Франковск, Шепетовка</h6>
-                  <a class="telephone text-nowrap" href="tel:+380974996005">
-                    т. +38 (097) 499-60-05
-                  </a>
-                </div>
+              <div class="col footer-left">
+                <h6>Бровары, Борисполь, Черкассы</h6>
+                <a class="telephone text-nowrap" href="tel:+380735103130">
+                  т. +38 (073) 510-31-30
+                </a>
               </div>
-              <!-- <div class="row">
+            </div>
+            <div class="row">
+              <div class="col footer-left">
+                <h6>Чернигов</h6>
+                <a class="telephone text-nowrap" href="tel:+380974996005">
+                  т. +38 (097) 499-60-05
+                </a>
+              </div>
+              <div class="col footer-left">
+                <h6>Львов</h6>
+                <a class="telephone text-nowrap" href="tel:+380508765551">
+                  т. +38 (050) 876-55-51
+                </a>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col footer-left">
+                <h6>Хмельницкий, Тернополь, Винница, Ивано-Франковск, Шепетовка</h6>
+                <a class="telephone text-nowrap" href="tel:+380974996005">
+                  т. +38 (097) 499-60-05
+                </a>
+              </div>
+            </div>
+            <!-- <div class="row">
                             <div class="col footer-left">
                                 <h6>e-mail</h6>
                                 <a class="telephone text-nowrap"
                                     href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
                             </div>
                         </div> -->
-            </div>
+          </div>
             <div class="col-lg-4 col-6 p-4 offset-md-2">
               <div class="footer-left">
                 <h6>ВЕНДИНГ</h6>
